# redshift

./: .gitignore  Makefile  README.md  pyproject.toml  type-Ia-supernova-data.json
data/: jla_lcparams.txt  perlmutter.csv  supernova-ibl-gov.csv
data/barris-2004/: ReadMe
data/cfaspec_M08snIa/sn1997do/: sn1997do-19971102.flm  sn1997do-19971103.flm  sn1997do-19971106.flm  sn1997do-19971107.flm  sn1997do-19971122.flm  sn1997do-19971124.flm  sn1997do-19971125.flm  sn1997do-19971126.flm  sn1997do-19971128.flm  sn1997do-19971129.flm  sn1997do-19971204.flm  sn1997do-19971205.flm
data/cfaspec_M08snIa/sn1998ab/: sn1998ab-19980403.flm  sn1998ab-19980429.flm  sn1998ab-19980430.flm  sn1998ab-19980501.flm  sn1998ab-19980502.flm  sn1998ab-19980503.flm  sn1998ab-19980504.flm  sn1998ab-19980516.flm  sn1998ab-19980518.flm  sn1998ab-19980528.flm  sn1998ab-19980601.flm
data/cfaspec_M08snIa/sn1998aq/: README  sn1998aq-19980428.flm  sn1998aq-19980429.flm  sn1998aq-19980430.flm  sn1998aq-19980501.flm  sn1998aq-19980502.flm  sn1998aq-19980503.flm  sn1998aq-19980504.flm  sn1998aq-19980516.flm  sn1998aq-19980518.flm  sn1998aq-19980521.flm  sn1998aq-19980528.flm  sn1998aq-19980529.flm  sn1998aq-19980602.flm  sn1998aq-19980617.flm  sn1998aq-19980621.flm  sn1998aq-19980624.flm  sn1998aq-19980626.flm  sn1998aq-19980629.flm  sn1998aq-19980702.flm  (+6 more)
data/filters/: I.xls  README.md
paper/: Makefile  code_listing.py  dark_energy_corrections.tex  paper.tex  references.bib
src/redshift/: cepheid.py  okay_corrections.py  scrape_rochester_astronomy.py  scratch.py  supernova.py
(+299 files in other folders)
